--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "autoHide.autoHidePanel": false
+  "autoHide.autoHidePanel": false,
+  "i18n-ally.localesPaths": [],
+  "cSpell.words": [
+    "rdoc"
+  ],
+  "editor.formatOnSave": true
 }
